[gd_scene load_steps=2 format=3 uid="uid://bx11ray3gawmp"]

[ext_resource type="Script" path="res://scenes/projectiles/abstract_projectile.gd" id="1_aucas"]

[node name="AbstractProjectile" type="RigidBody2D" groups=["projectiles"]]
collision_layer = 16
collision_mask = 10
script = ExtResource("1_aucas")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="FloorDetectionArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorDetectionArea"]

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="FloorDetectionArea" to="." method="_on_floor_detection_area_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
